--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -175,7 +175,7 @@
                             <p class="d-flex">
                                 
                                 <span>
-                                    Solltest Du am Workshop nicht teilnehmen können, kannst du deine Workshop-Teilnahme an eine weitere Person übertragen. Lass mir hierzu bitte eine Mail zukommen, wer dich beim Workshop vertreten wird. Bei einer kurzfristigen Absage (2 Tage) ohne Vertretung beträgt die Stornierungsgebühr 50 % des Kurspreises.
+                                    Solltest Du am Workshop nicht teilnehmen können, kannst Du deine Workshop-Teilnahme an eine weitere Person übertragen. Lass mir hierzu bitte eine Mail zukommen, wer Dich beim Workshop vertreten wird. Findest Du keine Vertretung oder wird ein Workshop von meiner Seite aus abgesagt, erhältst Du von mir eine Gutschrift, die Du für Workshops oder im Shop einlösen kannst (außer Papeterie aus der Perlenkinderwelt). Bei einer kurzfristigen Absage (2 Tage) ohne Vertretung beträgt die Stornierungsgebühr 50 % des Kurspreises.
 
 
                                 </span>
