--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -95,7 +95,7 @@
                             <h2>Anfänger</h2>
                             <p>55€ Kursgebühr</p>
                         </div>
-                        <img src="images/2Guide_1000p.JPG" alt="Image" class="img-fluid">
+                        <img src="images/AnfaengerWorkshop.png" alt="Image" class="img-fluid">
                     </a>                    
 
                     <a href="kursbuchenAdvanced.html" target="_blank" class="work-thumb">
@@ -103,7 +103,7 @@
                             <h2>Fortgeschrittene</h2>
                             <p>60€ Kursgebühr</p>
                         </div>
-                        <img src="images/2VonOben_1800p.JPG" alt="Image" class="img-fluid">
+                        <img src="images/AdvancedWorkshop.png" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
