--- a/shop.html
+++ b/shop.html
@@ -90,50 +90,45 @@
                 <div class="col-md-8 text-center">
                     <h2 class="mb-4 section-title">Portfolio</h2>
                     <p>
-                        Das wäre neu, hier würde ich aber dann gerne Gutscheine anbieten, ebenfalls einen Link zum Shop von PERLENKINDERWELT, die verkaufen nämlich Poster von mir. Außerdem biete ich auch an Fußmatten zu personalisieren etc. Das würde ich dann bei Gelegenheit ergänzen. Es soll so aufgebaut sein, dass man nie über den Shop bezahlt, sondern immer nur wie eine Anfrage/eine Buchung über ein Formular an mich schickt. Im ersten Schritt aber mal nur Gutscheine und die Verlinkung zum <a href="https://perlenkinderwelt.de/papeterie/" target="_blank">Perlenkinderwelt</a> Shop.
+                        Jeder Artikel ist ein Unikat und wird von Hand beschriftet.<br />
+                        Bitte beachtet deshalb eine etwas längere Phase zur Erstellung von bis zu zwei Wochen.<br />
+                        Besucht auch gerne mal meine Rubrik im <a href="https://perlenkinderwelt.de/papeterie/" target="_blank">Perlenkinderwelt</a> Shop.
                     </p>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row mb-5 no-gutters">
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="anfrage.html" class="work-thumb">
+                <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="100">
+                    <a href="gutscheinbestellen.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Gutscheine bestellen</h2>
 
                         </div>
-                        <img src="images/work_1.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Gutscheine.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
-                    <a href="anfrage.html" class="work-thumb">
+                <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="200">
+                    <a href="fussmatte.html" class="work-thumb">
                         <div class="work-text">
                             <h2>Fußmatten personalisieren</h2>
                         </div>
-                        <img src="images/work_2.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Fussmatten.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
 
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="300">
-                    <a href="anfrage.html" class="work-thumb">
+                <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="300">
+                    <a href="blumenkranz.html" class="work-thumb">
                         <div class="work-text">
-                            <h2>Einladungskarten Hochzeit</h2>
+                            <h2>Personalisierte Blumenkränze mit Trockenblumen</h2>
 
                         </div>
-                        <img src="images/work_3.jpg" alt="Image" class="img-fluid">
+                        <img src="images/Blumenkranz.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
-                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="anfrage.html" class="work-thumb">
-                        <div class="work-text">
-                            <h2>Geburtstagskarten</h2>
-                        </div>
-                        <img src="images/work_4.jpg" alt="Image" class="img-fluid">
-                    </a>
                 </div>
             </div>
         </div>
