--- a/shop.html
+++ b/shop.html
@@ -102,7 +102,7 @@
                 <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="100">
                     <a href="gutscheinbestellen.html" class="work-thumb">
                         <div class="work-text">
-                            <h2>Gutscheine bestellen</h2>
+                            <h2>Gutscheine</h2>
 
                         </div>
                         <img src="images/Gutscheine.jpg" alt="Image" class="img-fluid">
