--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -70,7 +70,7 @@
 
             <div class="row mt-5">
                 <div class="col-12 mb-5 order-2">
-                    <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/erich.balles@hotmail.de" method="post">
+                    <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/letteringimstall@gmail.com" method="post">
                         <input type="hidden" name="_subject" value="Gutschein bestellt!" />
                         <div class="row">
                             <div class="col-md-6 form-group">
